--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>YouTube Project</title>
+        <title>YouTube Clone</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
